# soldat_clang_tidy

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: clang_tidy.cmake
docs/: Notes.md
src/: CMakeLists.txt
src/soldat_clienthandle_to_class/: CMakeLists.txt  pch.hpp  soldat_clienthandle_to_class.cpp  stub_soldat_clienthandle_to_class.cpp
src/soldat_global_functions_to_member_functions/: CMakeLists.txt  Stub.hpp  pch.hpp  soldat_global_functions_to_member_functions.cpp  stub_soldat_global_functions_to_member_functions.cpp
src/soldat_global_objects_replacer/: CMakeLists.txt  Client.hpp  Stub.hpp  pch.hpp  soldat_global_objects_replacer.cpp  stub_soldat_global_objects_replacer.cpp
src/soldat_ifdef_replacer/: CMakeLists.txt  Stub.cpp  soldat_ifdef_replacer.cpp
src/soldat_inline_initializer_list/: CMakeLists.txt  pch.hpp  soldat_inline_initializer_list.cpp  stub_soldat_inline_initializer_list.cpp
src/soldat_move_global_functions_to_private_methods/: CMakeLists.txt  soldat_move_global_functions_to_private_methods.cpp  stub_soldat_move_global_functions_to_private_methods.cpp
src/soldat_move_global_variables_to_private_members/: CMakeLists.txt  soldat_move_global_variables_to_private_members.cpp  stub_soldat_move_global_variables_to_private_members.cpp
src/soldat_mysprite_is_valid_replacer/: CMakeLists.txt  soldat_mysprite_is_valid_replacer.cpp  stub_soldat_mysprite_is_valid_replacer.cpp
src/soldat_mysprite_replacer/: CMakeLists.txt  Stub.cpp  soldat_mysprite_replacer.cpp
src/soldat_replace_global_function_calls_with_this_calls/: CMakeLists.txt  pch.hpp  soldat_replace_global_function_calls_with_this_calls.cpp  stub_soldat_replace_global_function_calls_with_this_calls.cpp
src/soldat_replace_global_members_with_this/: CMakeLists.txt  pch.hpp  soldat_replace_global_members_with_this.cpp  stub_soldat_replace_global_members_with_this.cpp
src/soldat_sprite_is_mysprite_replacer/: CMakeLists.txt  soldat_sprite_is_mysprite_replacer.cpp  stub_soldat_sprite_is_mysprite_replacer.cpp
src/soldat_sprite_system_get_replacer/: CMakeLists.txt  soldat_sprite_system_get_replacer.cpp  stub_soldat_sprite_system_get_replacer.cpp
src/soldat_switch_case_to_command/: CMakeLists.txt  soldat_switch_case_to_command.cpp  stub_soldat_switch_case_to_command.cpp
tools/: add_new_check.py
