add_subdirectory(soldat_ifdef_replacer)
add_subdirectory(soldat_mysprite_replacer)
add_subdirectory(soldat_mysprite_is_valid_replacer)
add_subdirectory(soldat_sprite_is_mysprite_replacer)
add_subdirectory(soldat_sprite_system_get_replacer)
add_subdirectory(soldat_global_objects_replacer)
add_subdirectory(soldat_global_functions_to_member_functions)