add_subdirectory(soldat_ifdef_replacer)
add_subdirectory(soldat_mysprite_replacer)
add_subdirectory(soldat_mysprite_is_valid_replacer)
add_subdirectory(soldat_sprite_is_mysprite_replacer)
add_subdirectory(soldat_sprite_system_get_replacer)
add_subdirectory(soldat_global_objects_replacer)
add_subdirectory(soldat_global_functions_to_member_functions)
add_subdirectory(soldat_replace_global_function_calls_with_this_calls)
add_subdirectory(soldat_replace_global_members_with_this)
add_subdirectory(soldat_inline_initializer_list)
add_subdirectory(soldat_move_global_functions_to_private_methods)
add_subdirectory(soldat_move_global_variables_to_private_members)
add_subdirectory(soldat_switch_case_to_command)
add_subdirectory(soldat_clienthandle_to_class)
